# QuantumChess

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: REVIEW.md  plan.md
include/main/: audio.h  board.h  network.h  types.h  window.h
include/pieces/: pawn.h  piece.h
src/main/: audio.cpp  board.cpp  network.cpp  window.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
